--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "materialize-css": "^1.0.0-rc.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@types/materialize-css": "^1.0.11",
